--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.douyinpro.MainActivity">
 
-<com.hjm.bottomtabbar.BottomTabBar
-    android:id="@+id/bottomtabbar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</com.hjm.bottomtabbar.BottomTabBar>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/home_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
 
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/home_relative"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/home_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="首页"
+                    android:visibility="gone"
+                    android:textSize="25sp" />
+                <ImageView
+                    android:id="@+id/home_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:src="@drawable/refresh"
+                    android:layout_marginLeft="5dp" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/home_attention"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="关注"
+                android:textSize="25sp"/>
+
+            <ImageView
+                android:id="@+id/home_add"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:src="@drawable/add" />
+
+            <TextView
+                android:id="@+id/home_news"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="消息"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:id="@+id/home_mine"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="我"
+                android:textSize="25sp"/>
+        </LinearLayout>
+    </RelativeLayout>
+
+
+
+
+</RelativeLayout>
