--- a/app/src/main/res/layout/fragment_attention.xml
+++ b/app/src/main/res/layout/fragment_attention.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#f0f"
     android:layout_height="match_parent">
 
 </LinearLayout>
