--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="关注"
+                android:textColor="#FFF9F9F4"
                 android:textSize="25sp"/>
 
             <ImageView
@@ -66,6 +67,7 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:layout_weight="1"
+                android:textColor="#FFF9F9F4"
                 android:text="消息"
                 android:textSize="25sp"/>
 
@@ -75,6 +77,7 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:layout_weight="1"
+                android:textColor="#FFF9F9F4"
                 android:text="我"
                 android:textSize="25sp"/>
         </LinearLayout>
