--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#eeffaa"
+    android:background="#00ff22"
     android:layout_height="match_parent">
 
 
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/home_xrv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.jcodecraeer.xrecyclerview.XRecyclerView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/home_lin1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="60dp">
+        <LinearLayout
+            android:id="@+id/home_lin2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/home_recommend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="推荐"
+                android:textColor="#FFF4F9F4"
+                android:textSize="20sp" />
+            <TextView
+                android:id="@+id/home_nearby"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textColor="#FFF4F9F4"
+                android:text="附近"
+                android:textSize="20sp"
+                />
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/home_search"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:src="@drawable/search"
+            android:layout_weight="2"
+            android:layout_gravity="left" />
+    </LinearLayout>
+
+
+
+
+
+</RelativeLayout>
