--- a/app/src/main/res/layout/home_xrv.xml
+++ b/app/src/main/res/layout/home_xrv.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayer
-        android:id="@+id/videocontroller1"
+    <VideoView
+        android:id="@+id/home_videoplay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
