--- a/app/src/main/res/layout/fragment_commend.xml
+++ b/app/src/main/res/layout/fragment_commend.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/nearby_xrv"
+        android:id="@+id/commend_xrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.jcodecraeer.xrecyclerview.XRecyclerView>
