--- a/app/src/main/res/layout/nearby_xrv.xml
+++ b/app/src/main/res/layout/nearby_xrv.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/nearby_xrv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.jcodecraeer.xrecyclerview.XRecyclerView>
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/nearby_simple"
+        android:layout_width="240dp"
+        android:layout_height="300dp" />
 
 </LinearLayout>
